--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -27,6 +27,8 @@ jobs:
     needs: formatting-check
     name: "Test (${{ matrix.toolchain.name }}, ${{ matrix.build_type }})"
 
+    timeout-minutes: 30
+
     strategy:
       fail-fast: false
       matrix:
