Disable warnings known to cause false-positives

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,8 +35,12 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   target_compile_options(tests PRIVATE -Wshadow=compatible-local)
   target_compile_options(tests PRIVATE -Wduplicated-branches)
   target_compile_options(tests PRIVATE -Wduplicated-cond)
-  # Disabled due to GCC bug
-  # target_compile_options(tests PRIVATE -Wnull-dereference)
+  # False positives
+  target_compile_options(tests PRIVATE -Wno-array-bounds)
+  target_compile_options(tests PRIVATE -Wno-maybe-uninitialized)
+  target_compile_options(tests PRIVATE -Wno-restrict)
+  target_compile_options(tests PRIVATE -Wno-stringop-overflow -Wno-stringop-overread)
+  target_compile_options(tests PRIVATE -Wno-use-after-free)
 elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   target_compile_options(tests PRIVATE -Wshadow-uncaptured-local)
   target_compile_options(tests PRIVATE -Wloop-analysis)
